Organized strings.xml and added translations for en-rCA

--- a/AndroidLabs/app/src/main/AndroidManifest.xml
+++ b/AndroidLabs/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cst2335.vanm0012.androidlabs">
 
+    <uses-feature android:name="android.hardware.camera"
+        android:required="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,14 +15,13 @@
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login"
             android:theme="@style/AppTheme.NoActionBar">
-            </activity>
-        <activity android:name=".ListItemsActivity">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
+            </activity>
+        <activity android:name=".ListItemsActivity">
         </activity>
     </application>
 
