--- a/AndroidLabs/app/src/main/AndroidManifest.xml
+++ b/AndroidLabs/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cst2335.vanm0012.androidlabs">
 
-    <uses-feature android:name="android.hardware.camera"
+    <uses-feature
+        android:name="android.hardware.camera"
         android:required="true" />
 
     <application
@@ -11,18 +12,18 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".StartActivity">
-        </activity>
+        <activity android:name=".StartActivity"></activity>
         <activity
             android:name=".LoginActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
+
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
-            </activity>
-        <activity android:name=".ListItemsActivity">
         </activity>
+        <activity android:name=".ListItemsActivity"></activity>
+        <activity android:name=".ChatWindow"></activity>
     </application>
 
 </manifest>
