Added TestToolbar Layout

--- a/AndroidLabs/app/src/main/AndroidManifest.xml
+++ b/AndroidLabs/app/src/main/AndroidManifest.xml
@@ -28,7 +28,11 @@
         <activity android:name=".ListItemsActivity" />
         <activity android:name=".ChatWindow" />
         <activity android:name=".WeatherForecast" />
-        <activity android:name=".MessageDetails"></activity>
+        <activity android:name=".MessageDetails" />
+        <activity
+            android:name=".TestToolbar"
+            android:label="@string/title_activity_test_toolbar"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
